--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<figure class="infoAvatar ">
 				<img class="img animated bounceInUp" src="img/avatary.jpg"  alt="">
 				<figcaption class="name animated bounceInDown">
-					<h1>Yosimar Valega De La Hoz</h1>
+					<h1>Pepito Perez</h1>
 					<a class="btn" href="http://keyjonews.blogspot.com.co/"><i class="fa fa-link"></i>Blog</a>
 				</figcaption>
 			</figure>
