se añadio un titulo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 	<!-- Title -->
-	<title>Yosimar Valega</title>
+	<title>Blog de Yosimar</title>
 
 	<!-- Styles -->
 	<link rel="stylesheet" href="css/styles.css">
